samples/_failures_safe/1761530216_4d5a6f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_87dbdee3.c: In function ‘main’:
./samples/SAFE/__tmp_87dbdee3.c:174:5: error: expected declaration or statement at end of input
  174 |     free_matrix(result);
      |     ^~~~~~~~~~~
